[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "python-rrmngmnt"
dynamic = ["version"]
description = "Tool to manage remote systems and services"
readme = "README.rst"
license = { text = "GPL-2.0-only" }
authors = [{ name = "Lukas Bednar", email = "lukyn17@gmail.com" }]
keywords = ["remote", "resource", "service"]
classifiers = [
  "Topic :: Utilities",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["paramiko", "netaddr", "six"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/rhevm-qe-automation/python-rrmngmnt"


[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["rrmngmnt"]

[dependency-groups]
tests = [
  "attrs>=24.2.0",
  "pytest>=7.4.4",
  "pytest-cov>=4.1.0",
  "pytest-docker>=2.2.0",
  "pytest-xdist>=3.5.0",
]
